# pubchem-metabolite-descriptor-fetcher

./: .gitignore  MD simulation  README.md  fetch_pubchem_properties.py  pyproject.toml  visualize_properties.R
.github/workflows/: ci.yml
data/mock_data/: compound_library_mock.csv
tests/: test_fetch_pubchem_properties.py
